@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-30T08:23:45Z",
-  "count" : 5,
-  "count_minmax" : [ 5, 5 ],
-  "count_decinc" : [ -0, +5 ],
+  "timestamp" : "2022-10-30T16:26:32Z",
+  "count" : 6,
+  "count_minmax" : [ 5, 6 ],
+  "count_decinc" : [ -0, +6 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
