@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-10-30T08:23:45Z",
+  "timestamp" : "2022-10-30T16:26:32Z",
   "count_outdated" : 2539,
   "uniques_outdated" : 666,
   "count" : 2595,
-  "uniques" : 697,
+  "uniques" : 696,
   "clones" : [
     {
       "timestamp": "2022-10-16T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 2, 5 ],
-      "uniques": 3,
+      "uniques": 2,
       "uniques_minmax": [ 2, 4 ]
     },
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-10-30T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 5 ],
+      "count": 6,
+      "count_minmax": [ 5, 6 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
