@@ -1,11 +1,11 @@
 {
   "count": 56,
-  "uniques": 16,
+  "uniques": 15,
   "clones": [
     {
       "timestamp": "2022-10-16T00:00:00Z",
-      "count": 3,
-      "uniques": 3
+      "count": 2,
+      "uniques": 2
     },
     {
       "timestamp": "2022-10-17T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-10-30T00:00:00Z",
-      "count": 5,
+      "count": 6,
       "uniques": 2
     }
   ]
