@@ -1,3 +1,11 @@
+2022-10-30T16:26:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3356203175 # 983
+* notice: last 14d: unq all: 15 56
+* notice: prev accum: outdated-unq outdated-all / unq all: 666 2539 / 697 2595
+* notice: next accum: outdated-unq outdated-all / unq all: 666 2539 / 696 2595
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -1 -1 / +2 +6 -0 -0 / 2 6
+* notice: removed / changed dates: [] / [2022-10-16 2022-10-30]
+
 2022-10-30T08:23:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3354726153 # 982
 * notice: last 14d: unq all: 16 56
